Fix form wrapping on login page in russian. Slightly tweak box title on same position

--- a/html/NoAuth/css/rudder/login.css
+++ b/html/NoAuth/css/rudder/login.css
@@ -46,5 +46,10 @@
 %#
 %# END BPS TAGGED BLOCK }}}
 #login-box .titlebox-title .left {
-    padding-left: 0.75em;
+    padding-left: 0em;
 }
+
+ #login-box .input-row .label {
+     width: 13em;
+
+ }
